--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/mpezzente/api_search_app#readme",
   "devDependencies": {
+    "autoprefixer": "^7.1.5",
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
+    "gulp-postcss": "^7.0.0",
     "gulp-sass": "^3.1.0"
   }
 }
